# lab12

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  Dockerfile  README.md
_logs/polly/clang-cxx14/: log.txt
_logs/polly/default/: log-0.txt  log.txt
demo/: main.cpp
sources/: demo.cpp
